--- a/cumbari-Info.plist
+++ b/cumbari-Info.plist
@@ -41,16 +41,29 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>Cumbari</string>
+			<string></string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>Cumbari</string>
+				<string>fb276790739176083</string>
 			</array>
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
+	<key>FacebookAppID</key>
+	<string>276790739176083</string>
+	<key>FacebookDisplayName</key>
+	<string>SpacePowerCombat</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
